New Logo and Corporate Landing Page added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/main-18f3830bac.css">
+  <link rel="stylesheet" href="./styles/main-8fb59f537f.css">
 </head>
 <body>
   <noscript>
@@ -46,12 +46,11 @@
 <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
   <div class="header">
-    <div class="container">
-      <div class="logo"><img src="images/logo.svg">
-        <div class="live">
-          <div class="live-dot"></div><span>En Vivo</span><span class="h">Canal 21</span>
-        </div>
-      </div>
+    <div class="container"> 
+      <div class="logo"><a href="/"><img src="images/logo.svg"></a><a href="/">
+          <div class="live">
+            <div class="live-dot"></div><span>En Vivo</span><span class="h">Canal 21 HD</span>
+          </div></a><a href="/nosotros.html"><span>Quiénes Somos</span></a><a class="contact" href="mailto:contacto@wapptv.cl"><span>Contáctanos</span></a></div>
       <div class="social"><a href="https://www.facebook.com/wapptv.cl/"><img class="logo" src="images/facebook.svg"></a><a href="https://www.instagram.com/wapptv.cl/"><img class="logo" src="images/instagram.svg"></a><a href="https://www.youtube.com/channel/UCgylg1Pa7i56wLwn6sA74HA"><img class="logo" src="images/youtube.svg"></a><a href="https://twitter.com/wapptv"><img class="logo" src="images/twitter.svg"></a></div>
     </div>
   </div>
