cambios de texto

--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>WappTV</title>
-  <meta name="description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta name="description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -13,13 +13,13 @@
     })(window,document,'script','dataLayer','GTM-K33Q5NZ');
     
   </script>
-  <meta property="og:title" content="Somos WappTV">
-  <meta property="og:description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta property="og:title" content="WappTV">
+  <meta property="og:description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta property="og:image" content="/images/social-media.png">
   <meta property="og:url" content="https://www.wapptv.cl/">
   <meta property="og:site_name" content="WappTV">
-  <meta name="twitter:title" content="Somos WappTV">
-  <meta name="twitter:description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta name="twitter:title" content="WappTV">
+  <meta name="twitter:description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta name="twitter:image" content="/images/social-media.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@wapptv">
@@ -67,7 +67,7 @@
     <div class="center">
       <h1>
          Nace un nuevo medio <span class="h">interactivo, multiplataforma </span>y con huella de mujer</h1>
-      <h2>Somos el primer canal de TV con perspectiva de género y colaborativo en Chile.</h2>
+      <h2>Somos el primer canal colaborativo y con perspectiva de género en Chile.</h2>
     </div>
   </div>
   <div class="container">
@@ -78,11 +78,11 @@
       </div>
       <div class="col-4"><img class="icon" src="images/colaborative.svg">
         <h3>Colaborativo</h3>
-        <p>Desarrollo de contenidos colaborativo a través de alianzas focalizadas en la diversidad e inclusión social.</p>
+        <p>Forjamos alianzas focalizadas en la diversidad e inclusión social para el desarrollo de nuestros contenidos.</p>
       </div>
       <div class="col-4"><img class="icon" src="images/interactive.svg">
         <h3>Interactivo</h3>
-        <p>A través de formatos innovadores de desarrollo de contenidos tradicionales y en plataformas digitales.</p>
+        <p> Contamos con formatos innovadores para el desarrollo de contenidos tradicionales en plataformas digitales.</p>
       </div>
     </div>
   </div>
@@ -106,7 +106,7 @@
       </div>
       <div class="row">
         <div class="center">
-          <p>Conectamos a creadores, marcas y comunidades para crear juntos entretención, actualidad y cultura, con una mirada amable, honesta y cercana a las personas.</p><a class="btn" href="mailto:contacto@wapptv.cl">¡Hablemos!</a>
+          <p>Conectamos creadores, marcas y comunidades para entregar entretención, actualidad y cultura, con una mirada amable, honesta y cercana a las personas.</p><a class="btn" href="mailto:contacto@wapptv.cl">¡Hablemos!</a>
         </div>
       </div>
     </div>
@@ -116,19 +116,19 @@
       <div class="head"><img class="icon" src="images/icon.svg">
         <h4>¡Bienvenid@ a nuestra comunidad Wapp!</h4>
         <p>Somos el primer grupo multimedia Chileno con Perspectiva de Género en la televisión abierta y plataformas digitales</p>
-        <p>Descubre nuestro contenido original en el Canal 21 de la señal de TV Digital y Plataformas Digitales</p>
+        <p>Descubre nuestro contenido original en el Canal 21.1 de la señal de TV Digital y Plataformas Digitales</p>
       </div>
       <div class="row">
         <div class="col-3">
           <div class="show-box"><img class="tv-show" src="images/tu-opinas.png"><span class="h2">Actualidad</span>
             <h5>Tu Opinas</h5>
-            <p>Capsulas de opinión donde diversos líderes de opinión hablar sobre diversos temas de nuestra sociedad.</p>
+            <p>Diversos líderes de opinión y especialistas hablarán sobre temas de actualidad como sociedad, economía, tecnología, política, salud, derechos humanos y mucho más.</p>
           </div>
         </div>
         <div class="col-3">
           <div class="show-box"><img class="tv-show" src="images/cuestionario.png"><span class="h2">Entrevista</span>
             <h5>Cuestionario</h5>
-            <p>Una serie de preguntas a destacadas personalidades mientras se desplazan por la ciudad.</p>
+            <p>Distintas personalidades destacadas en cada una de sus profesiones se enfrentan al cuestionario de WappTV, en diferentes puntos destacados de la ciudad.</p>
           </div>
         </div>
         <div class="col-3">
@@ -140,7 +140,7 @@
         <div class="col-3">
           <div class="show-box"><img class="tv-show" src="images/inspiradas.png"><span class="h2">Documental</span>
             <h5>Inspiradas</h5>
-            <p>Niñas conocen a mujeres módelos de rol y cumplen el sueño de conocerlas y también visitar el entorno en el que desempeñan su profesión.</p>
+            <p>Diferentes niñas que han encontrado su vocación desde pequeñas, se cruzarán y conocerán mujeres que son referentes y modelos a seguir en su profesión, quienes les contarán su experiencia y el camino que recorrieron para cumplir sus sueños.</p>
           </div>
         </div>
       </div>
@@ -148,13 +148,13 @@
         <div class="col-3">
           <div class="show-box"><img class="tv-show" src="images/cazadora-emprendedores.png"><span class="h2">PYME</span>
             <h5>Cazadora de Emprendedores</h5>
-            <p>Suiling Chau conoce distintos emprendedores que han sorteado de manera positiva las dificultades que se viven en tiempos de COVID-19.</p>
+            <p>Emprender es perseverar, sin miedo al fracaso, hasta alcanzar los objetivos. Nuestra cazadora de emprendedores, Suiling Chau, nos presentara en cada capitulo a distintas personas que se animaron a apostar por sus sueños.</p>
           </div>
         </div>
         <div class="col-3">
           <div class="show-box"><img class="tv-show" src="images/craft-box.png"><span class="h2">Wellness</span>
             <h5>Craft Box</h5>
-            <p>Dos amantes de las artes nos enseñan manualidades que cualquiera puede realizar.</p>
+            <p>Deja volar tu imaginación y pon tus manos a trabajar junto a Silvia y Boris. En cada capítulo encontrarás una oferta diferente de manualidades para realizar en casa.</p>
           </div>
         </div>
         <div class="col-3">
