--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>WappTV</title>
-  <meta name="description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta name="description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -13,13 +13,13 @@
     })(window,document,'script','dataLayer','GTM-K33Q5NZ');
     
   </script>
-  <meta property="og:title" content="Somos WappTV">
-  <meta property="og:description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta property="og:title" content="WappTV">
+  <meta property="og:description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta property="og:image" content="/images/social-media.png">
   <meta property="og:url" content="https://www.wapptv.cl/">
   <meta property="og:site_name" content="WappTV">
-  <meta name="twitter:title" content="Somos WappTV">
-  <meta name="twitter:description" content="El primer canal de TV con perspectiva de género y colaborativo en Chile">
+  <meta name="twitter:title" content="WappTV">
+  <meta name="twitter:description" content="Somos el primer canal colaborativo y con perspectiva de género en Chile">
   <meta name="twitter:image" content="/images/social-media.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@wapptv">
@@ -58,7 +58,7 @@
     <div class="center"> <img class="icon" src="images/icon.svg">
       <h1>Somos WappTV</h1>
       <p>
-         El Primer Canal de TV con <span class="h">Perspectiva de Género </span>y <span class="h">Colaborativo </span>en Chile. <br>Síguenos en Nuestras Redes Sociales</p>
+         El primer canal  en Chile <span class="h">Colaborativo </span>y <span class="h">Perspectiva de Género </span>en Chile. <br>Síguenos en Nuestras Redes Sociales</p>
       <div class="social"><a class="btn" href="https://www.facebook.com/wapptv.cl/"><img class="logo" src="images/facebook.svg">Facebook</a><a class="btn" href="https://www.instagram.com/wapptv.cl/"><img class="logo" src="images/instagram.svg">Instagram</a><a class="btn" href="https://www.youtube.com/channel/UCgylg1Pa7i56wLwn6sA74HA"><img class="logo" src="images/youtube.svg">YouTube  </a><a class="btn" href="https://twitter.com/wapptv"><img class="logo" src="images/twitter.svg">Twitter</a></div>
       <p>
          Escríbenos a <a href="mailto:contacto@wapptv.cl">contacto@wapptv.cl</a></p>
