live player added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/main-8fb59f537f.css">
+  <link rel="stylesheet" href="./styles/main-d2c32dee50.css">
 </head>
 <body>
   <noscript>
@@ -55,10 +55,12 @@
     </div>
   </div>
   <div class="container">
-    <div class="center"> <img class="icon" src="images/icon.svg">
+    <div class="center"> 
+      <div class="player">
+        <iframe src="//mdstrm.com/live-stream/6046495ddf98b007fa2fe807?autoplay=true" width="960" height="540" allow="autoplay; fullscreen; encrypted-media" frameborder="0" allowfullscreen allowscriptaccess="always" scrolling="no"></iframe>
+      </div><img class="icon" src="images/icon.svg">
       <h1>Somos WappTV</h1>
-      <p>
-         El primer canal  en Chile <span class="h">Colaborativo </span>y <span class="h">Perspectiva de Género </span>en Chile. <br>Síguenos en Nuestras Redes Sociales</p>
+      <p> </p>El primer canal  en Chile <span class="h">Colaborativo </span>y <span class="h">Perspectiva de Género </span>en Chile. <br>Síguenos en Nuestras Redes Sociales
       <div class="social"><a class="btn" href="https://www.facebook.com/wapptv.cl/"><img class="logo" src="images/facebook.svg">Facebook</a><a class="btn" href="https://www.instagram.com/wapptv.cl/"><img class="logo" src="images/instagram.svg">Instagram</a><a class="btn" href="https://www.youtube.com/channel/UCgylg1Pa7i56wLwn6sA74HA"><img class="logo" src="images/youtube.svg">YouTube  </a><a class="btn" href="https://twitter.com/wapptv"><img class="logo" src="images/twitter.svg">Twitter</a></div>
       <p>
          Escríbenos a <a href="mailto:contacto@wapptv.cl">contacto@wapptv.cl</a></p>
