ajustes de texto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <iframe src="//mdstrm.com/live-stream/6046495ddf98b007fa2fe807?autoplay=true" width="960" height="540" allow="autoplay; fullscreen; encrypted-media" frameborder="0" allowfullscreen allowscriptaccess="always" scrolling="no"></iframe>
       </div><img class="icon" src="images/icon.svg">
       <h1>Somos WappTV</h1>
-      <p> </p>El primer canal  en Chile <span class="h">Colaborativo </span>y <span class="h">Perspectiva de Género </span>en Chile. <br>Síguenos en Nuestras Redes Sociales
+      <p> </p>El primer canal <span class="h">Colaborativo </span>y con <span class="h">Perspectiva de Género </span>en Chile. <br>Síguenos en Nuestras Redes Sociales
       <div class="social"><a class="btn" href="https://www.facebook.com/wapptv.cl/"><img class="logo" src="images/facebook.svg">Facebook</a><a class="btn" href="https://www.instagram.com/wapptv.cl/"><img class="logo" src="images/instagram.svg">Instagram</a><a class="btn" href="https://www.youtube.com/channel/UCgylg1Pa7i56wLwn6sA74HA"><img class="logo" src="images/youtube.svg">YouTube  </a><a class="btn" href="https://twitter.com/wapptv"><img class="logo" src="images/twitter.svg">Twitter</a></div>
       <p>
          Escríbenos a <a href="mailto:contacto@wapptv.cl">contacto@wapptv.cl</a></p>
